--- a/trunk/framework.datastorage/.classpath
+++ b/trunk/framework.datastorage/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/framework.core"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="var" path="PLAZMA_LIB/xalan-2.4.0.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
