--- a/trunk/framework.datastorage/.classpath
+++ b/trunk/framework.datastorage/.classpath
@@ -10,5 +10,8 @@
 	<classpathentry kind="var" path="PLAZMA_LIB/jackson-core-2.1.4.jar"/>
 	<classpathentry kind="var" path="PLAZMA_LIB/jackson-databind-2.1.4.jar"/>
 	<classpathentry kind="var" path="PLAZMA_LIB/jackson-annotations-2.1.4.jar"/>
+	<classpathentry kind="var" path="PLAZMA_LIB/poi-3.10.1.jar"/>
+	<classpathentry kind="var" path="PLAZMA_LIB/poi-ooxml-3.10.1.jar"/>
+	<classpathentry kind="var" path="PLAZMA_LIB/poi-ooxml-schemas-3.10.1.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
