--- a/framework.datastorage/.classpath
+++ b/framework.datastorage/.classpath
@@ -13,5 +13,7 @@
 	<classpathentry kind="var" path="PLAZMA_LIB/poi-3.10.1.jar"/>
 	<classpathentry kind="var" path="PLAZMA_LIB/poi-ooxml-3.10.1.jar"/>
 	<classpathentry kind="var" path="PLAZMA_LIB/poi-ooxml-schemas-3.10.1.jar"/>
+	<classpathentry kind="var" path="PLAZMA_LIB/xmlbeans-2.5.0.jar"/>
+	<classpathentry kind="var" path="PLAZMA_LIB/dom4j-1.4.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
