--- a/trunk/framework.script/build.xml
+++ b/trunk/framework.script/build.xml
@@ -1,46 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="plazma-framework-script" default="generate">
 
-  <path id="classpath">
-    <pathelement location="classes/" />
-    <pathelement location="src/" />
-    <fileset dir="../lib/antlr">
-      <include name="*.jar" />
-    </fileset>
-  </path>
+	<property file="build.properties" />
+	
+	<path id="classpath">
+		<pathelement location="classes/" />
+		<pathelement location="src/" />
+		<fileset dir="../lib/antlr">
+			<include name="*.jar" />
+		</fileset>
+	</path>
 
-  <target name="clean" description="Removes all binaries.">
-      <!-- 
+	<target name="clean" description="Removes all binaries.">
+		<!-- 
       <delete dir="classes/" />
       <mkdir dir="classes/" />
       -->
-  </target>
+	</target>
 
-  <target name="compile" depends="clean" description="Compiles all source files.">
-    <javac srcdir="src/" destdir="classes/" includeantruntime="false">
-      <classpath refid="classpath" />
-    </javac>
-  </target>
+	<target name="compile" depends="clean" description="Compiles all source files.">
+		<javac srcdir="src/" destdir="classes/" includeantruntime="false">
+			<classpath refid="classpath" />
+		</javac>
+	</target>
 
-  <target name="generate" depends="clean" description="Generates the lexer and parser.">
-    <echo>Generating the lexer and parser...</echo>
-    <java classname="org.antlr.Tool" fork="true" failonerror="true">
-      <arg value="-fo" />
-      <arg value="gen/org/plazmaforge/framework/script/parser/" />
-      <arg value="grammar/PlazmaScript.g" />
-      <classpath refid="classpath" />
-    </java>
-    <echo>Generating the tree walker...</echo>
-    <java classname="org.antlr.Tool" fork="true" failonerror="true">
-      <arg value="-fo" />
-      <arg value="gen/org/plazmaforge/framework/script/parser/" />
-      <arg value="grammar/PlazmaScriptWalker.g" />
-      <classpath refid="classpath" />
-    </java>
-    <antcall target="compile" />
-  </target>
+	<target name="generate" depends="clean" description="Generates the lexer and parser.">
+		<echo>Generating the lexer and parser...</echo>
+		<java classname="org.antlr.Tool" fork="true" failonerror="true">
+			<arg value="-fo" />
+			<arg value="gen/org/plazmaforge/framework/script/parser/" />
+			<arg value="grammar/PlazmaScript.g" />
+			<classpath refid="classpath" />
+		</java>
+		<echo>Generating the tree walker...</echo>
+		<java classname="org.antlr.Tool" fork="true" failonerror="true">
+			<arg value="-fo" />
+			<arg value="gen/org/plazmaforge/framework/script/parser/" />
+			<arg value="grammar/PlazmaScriptWalker.g" />
+			<classpath refid="classpath" />
+		</java>
+		<antcall target="compile" />
+	</target>
 
- <!--	
+	<target name="create-jar" description="Create jar file">
+		<mkdir dir="${dist.dir}" />
+		<jar destfile="${dist.dir}/plazma-framework-script-${version}.jar" basedir="${classes.dir}" includes="**">
+
+			<manifest>
+				<attribute name="Manifest-Version" value="1.0" />
+				<attribute name="Plazma-Version" value="${version}" />
+			</manifest>
+		</jar>
+	</target>
+
+	<!--	
   <target name="run" depends="generate" description="Executes the main class.">
     <echo>Running the main class...</echo>
     <java classname="plazma.Main">
@@ -55,5 +68,5 @@
     </java>
   </target>
   -->
-  
+
 </project>
