--- a/framework.script/build.properties
+++ b/framework.script/build.properties
@@ -4,6 +4,5 @@ classes.dir = ${basedir}/classes
 src.dir = ${basedir}/src
 
 lib.dir = ../lib
-#dist.dir = ../dist
-dist.dir = dist
+dist.dir = ../dist
 
