--- a/framework.report/.classpath
+++ b/framework.report/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="var" path="PLAZMA_LIB/jdom_1_0.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/framework.script"/>
 	<classpathentry kind="var" path="PLAZMA_LIB/antlr/antlr-3.2.jar"/>
+	<classpathentry kind="var" path="PLAZMA_LIB/poi-3.6-20091214.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
