--- a/trunk/framework.report/.classpath
+++ b/trunk/framework.report/.classpath
@@ -14,6 +14,6 @@
 	<classpathentry kind="var" path="PLAZMA_LIB/poi-3.10.1.jar"/>
 	<classpathentry kind="var" path="PLAZMA_LIB/xmlbeans-2.5.0.jar"/>
 	<classpathentry kind="var" path="PLAZMA_LIB/dom4j-1.4.jar"/>
-	<classpathentry kind="var" path="PLAZMA_LIB/itextpdf-5.5.0.jar"/>
+	<classpathentry kind="var" path="PLAZMA_LIB/itext/itextpdf-5.5.0.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
