--- a/trunk/framework.report/.classpath
+++ b/trunk/framework.report/.classpath
@@ -15,5 +15,6 @@
 	<classpathentry kind="var" path="PLAZMA_LIB/xmlbeans-2.5.0.jar"/>
 	<classpathentry kind="var" path="PLAZMA_LIB/dom4j-1.4.jar"/>
 	<classpathentry kind="var" path="PLAZMA_LIB/itext/itextpdf-5.5.0.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/framework.datastorage"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
