--- a/trunk/framework.report/build.properties
+++ b/trunk/framework.report/build.properties
@@ -8,11 +8,14 @@ dist.dir = ../dist
 
 
 plazma.target.dir = ../plazma.target
-plazma.source.dir = ${plazma.target.dir}/plazma-projects-${version}
+plazma.target.projects.dir = ${plazma.target.dir}/plazma-projects-${version}
 
-framework.core.module = framework.report
-framework.core.dir = ../${framework.report.module}
-framework.core.target.dir = ${plazma.source.dir}/${framework.report.module}
+framework.report.module = framework.report
+framework.report.dir = ../${framework.report.module}
+framework.report.target.dir = ${plazma.target.projects.dir}/${framework.report.module}
 
-dist.dir = ../dist
-lib.dir = ../lib
+install.report = plazma-report
+install.report.dir = ${plazma.target.dir}/${install.report}-${version}
+
+lib.fileset = jdom*.jar, antlr/antlr-3.2.jar, poi-ooxml-3.10.1.jar, poi-ooxml-schemas-3.10.1.jar, poi-3.10.1.jar, xmlbeans-2.5.0.jar, dom4j-1.4.jar, itext/itextpdf-5.5.0.jar
+dist.fileset = plazma-framework-core-${version}.jar, plazma-framework-uwt-${version}.jar, plazma-framework-script-${version}.jar, plazma-framework-datastorage-${version}.jar, plazma-framework-report-${version}.jar
