--- a/framework.report.test/.classpath
+++ b/framework.report.test/.classpath
@@ -3,11 +3,16 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
-	<classpathentry kind="var" path="PLAZMA_LIB/jasperreports/jasperreports-3.7.6-fix.jar"/>
+	<classpathentry kind="var" path="PLAZMA_LIB/jasperreports/jasperreports-6.0.3.jar"/>
 	<classpathentry kind="var" path="PLAZMA_LIB/commons-digester-1.7.jar"/>
 	<classpathentry kind="var" path="PLAZMA_LIB/commons-logging.jar"/>
 	<classpathentry kind="var" path="PLAZMA_LIB/commons-collections-3.1.jar"/>
 	<classpathentry kind="var" path="PLAZMA_LIB/commons-beanutils-1.7.jar"/>
 	<classpathentry kind="var" path="PLAZMA_LIB/hsqldb.jar"/>
+	<classpathentry kind="var" path="PLAZMA_LIB/itext/itextpdf-5.5.0.jar"/>
+	<classpathentry kind="var" path="PLAZMA_LIB/itext/itext-pdfa-5.5.0.jar"/>
+	<classpathentry kind="var" path="PLAZMA_LIB/jasperreports/castor-core-1.3.3.jar"/>
+	<classpathentry kind="var" path="PLAZMA_LIB/jasperreports/castor-xml-1.3.3.jar"/>
+	<classpathentry kind="var" path="PLAZMA_LIB/jasperreports/velocity-1.7-dep.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
