--- a/trunk/framework.report/build.properties
+++ b/trunk/framework.report/build.properties
@@ -18,4 +18,4 @@ install.report = plazma-report
 install.report.dir = ${plazma.target.dir}/${install.report}-${version}
 
 lib.fileset = jdom*.jar, antlr/antlr-3.2.jar, poi-ooxml-3.10.1.jar, poi-ooxml-schemas-3.10.1.jar, poi-3.10.1.jar, xmlbeans-2.5.0.jar, dom4j-1.4.jar, itext/itextpdf-5.5.0.jar
-dist.fileset = plazma-framework-core-${version}.jar, plazma-framework-uwt-${version}.jar, plazma-framework-script-${version}.jar, plazma-framework-datastorage-${version}.jar, plazma-framework-report-${version}.jar
+dist.fileset = plazma-framework-core-${version}.jar, plazma-framework-datastorage-${version}.jar, plazma-framework-script-${version}.jar, plazma-framework-uwt-${version}.jar, plazma-framework-report-${version}.jar
