--- a/trunk/framework.report/.classpath
+++ b/trunk/framework.report/.classpath
@@ -5,7 +5,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/framework.core"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/framework.uwt"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>	
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="var" path="PLAZMA_LIB/jdom_1_0.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/framework.script"/>
 	<classpathentry kind="var" path="PLAZMA_LIB/antlr/antlr-3.2.jar"/>
@@ -16,5 +16,6 @@
 	<classpathentry kind="var" path="PLAZMA_LIB/dom4j-1.4.jar"/>
 	<classpathentry kind="var" path="PLAZMA_LIB/itext/itextpdf-5.5.0.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/framework.datastorage"/>
+	<classpathentry kind="var" path="PLAZMA_LIB/xalan-2.4.0.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
