--- a/trunk/framework.report/build.xml
+++ b/trunk/framework.report/build.xml
@@ -24,23 +24,23 @@
 
 	<target name="clean-framework-report" description="Clean framework report">
 		<delete dir="${framework.report.target.dir}"/>
-    </target>
+	</target>
 
 
 	<target name="create-framework-report" description="Create framework report" depends="clean-framework-report">
-		
+
 		<mkdir dir="${plazma.target.projects.dir}" />
 		<mkdir dir="${framework.report.target.dir}" />
 		<mkdir dir="${framework.report.target.dir}/dist" />
 		<mkdir dir="${framework.report.target.dir}/lib" />
-		
+
 		<copy todir="${framework.report.target.dir}">
 			<fileset dir="${framework.report.dir}">
 				<include name="**" />
 				<exclude name=".settings/**" />
 			</fileset>
 		</copy>
-		
+
 		<copy todir="${framework.report.target.dir}/dist">
 			<fileset dir="${dist.dir}" includes="${dist.fileset}"/>
 		</copy>
@@ -48,7 +48,7 @@
 		<copy todir="${framework.report.target.dir}/lib">
 			<fileset dir="${lib.dir}" includes="${lib.fileset}"/>
 		</copy>
-		
+
 		<!--
       	<replace file="${framework.report.target.dir}/.classpath" token="/lib/" value = "lib/"/>
 		<replace file="${framework.report.target.dir}/.classpath" token="PLAZMA_LIB/" value = "lib/"/>
@@ -58,20 +58,27 @@
 
 	<target name="clean-framework-report-install" description="Clean framework report install">
 		<delete dir="${install.dir}"/>
-    </target>
+	</target>
 
 	<target name="create-framework-report-install" description="Create framework report" depends="clean-framework-report-install">
-		
+
 		<mkdir dir="${install.report.dir}" />
 		<mkdir dir="${install.report.dir}/dist" />
 		<mkdir dir="${install.report.dir}/lib" />
-		
+		<mkdir dir="${install.report.dir}/samples" />
+
 		<copy todir="${install.report.dir}/dist">
 			<fileset dir="${dist.dir}" includes="${dist.fileset}"/>
 		</copy>
 
 		<copy todir="${install.report.dir}/lib">
 			<fileset dir="${lib.dir}" includes="${lib.fileset}"/>
+		</copy>
+
+		<copy todir="${install.report.dir}/samples">
+			<fileset dir="${framework.report.dir}/samples">
+				<include name="**" />
+			</fileset>
 		</copy>
 
 		<copy todir="${install.report.dir}">
@@ -83,14 +90,14 @@
 
 		<replace file="${install.report.dir}/runExport.bat" token="../lib/" value = "lib/"/>
 		<replace file="${install.report.dir}/runExport.bat" token="../dist/" value = "dist/"/>
-			
+
 		<replace file="${install.report.dir}/runReport.bat" token="../lib/" value = "lib/"/>
 		<replace file="${install.report.dir}/runReport.bat" token="../dist/" value = "dist/"/>
-		
+
 		<zip destfile="${plazma.target.dir}/${install.report}-${version}.zip"  basedir="${install.report.dir}"/>
 		<delete dir="${install.report.dir}"/>
-		
+
 	</target>
-	
+
 
 </project>
