--- a/trunk/framework.uwt.jfx.demo/.classpath
+++ b/trunk/framework.uwt.jfx.demo/.classpath
@@ -2,5 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/framework.core"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/framework.uwt"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/framework.uwt.demo"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/framework.uwt.jfx"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
